7785810510 - Ajout du blanc dans la doc technique. + remplacement des échantillons de couleur par un composant + réorganisation de la doc des couleurs, alignée sur celle du site sdg.

--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -296,23 +296,9 @@ main {
   padding-bottom: var(--qc-spacer-lg);
 }
 
-.color-details {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-.color-details > div + div {
-  margin-left: var(--qc-spacer-md);
-}
-.color-details + .color-details {
-  margin-top: var(--qc-spacer-md);
-}
-
-.color-sample {
-  width: 4.8rem;
-  height: 4.8rem;
-  border-radius: 50%;
-  flex-shrink: 0;
+qc-color-doc {
+  display: block;
+  margin-bottom: var(--qc-spacer-md);
 }
 
 .title-samples {
