--- a/src/sdg/scss/settings/_tokens.scss
+++ b/src/sdg/scss/settings/_tokens.scss
@@ -67,7 +67,7 @@ $xl-tokens: (
     ),
     max-content-width: rem(825),
     color: (
-        white : white,
+        white : #ffffff,
         blue : (
             pale : #dae6f0,
             light : #4a98d9,
