--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -77,7 +77,7 @@ Always use this function for rem values
   --qc-line-height-xl: var(--qc-line-height-200);
   --qc-line-height-content: var(--qc-line-height-md);
   --qc-max-content-width: 82.5rem;
-  --qc-color-white: white;
+  --qc-color-white: #ffffff;
   --qc-color-blue-pale: #dae6f0;
   --qc-color-blue-light: #4a98d9;
   --qc-color-blue-regular: #1472bf;
