--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -198,24 +198,20 @@ pre code button.copied .copied, pre .qc-code button.copied .copied {
   margin-top: var(--qc-spacer-lg);
 }
 
-.qc-shading-0 {
-  box-shadow: 0 0 0 var(--qc-color-grey-light);
-}
-
 .qc-shading-1, .btn.btn-primary {
-  box-shadow: 0 1px 4px var(--qc-color-grey-light);
+  box-shadow: 0 1px 4px var(--qc-box-shadow-color);
 }
 
 .qc-shading-2 {
-  box-shadow: 0 2px 8px var(--qc-color-grey-light);
+  box-shadow: 0 2px 8px var(--qc-box-shadow-color);
 }
 
 .qc-shading-3 {
-  box-shadow: 0 4px 16px var(--qc-color-grey-light);
+  box-shadow: 0 4px 16px var(--qc-box-shadow-color);
 }
 
 .qc-shading-4 {
-  box-shadow: 0 6px 24px var(--qc-color-grey-light);
+  box-shadow: 0 6px 24px var(--qc-box-shadow-color);
 }
 
 .btn {
