--- a/src/sdg/scss/base/_typography.scss
+++ b/src/sdg/scss/base/_typography.scss
@@ -73,6 +73,16 @@ a {
     }
   }
 
+  qc-external-link & {
+    display: inline-block;
+    padding-right: rem(20);
+    &:after {
+      @include external-link-img();
+      content: ' ';
+    }
+  }
+
+
 }
 
 code, .qc-code {
