--- a/src/sdg/scss/modules/_utils.scss
+++ b/src/sdg/scss/modules/_utils.scss
@@ -37,10 +37,13 @@
 }
 
 @mixin external-link-img() {
-  max-height: rem(11);
-  max-width: rem(11);
-  margin-bottom: rem(1.6);
+  height: rem(16);
+  width: rem(15);
+  margin-right: rem(-15);
   display: inline-block;
+  mask: getImageUrl(external-link) no-repeat top rem(5) right;
+  mask-size:  rem(11) rem(11);
+  background: token-value(color link text);
 }
 
 @mixin sr-only() {
