--- a/src/sdg/scss/base/_colors.scss
+++ b/src/sdg/scss/base/_colors.scss
@@ -2,11 +2,14 @@
 @use "modules/tokens" as *;
 @use "modules/map" as *;
 @use "sass:map";
+@use "sass:list";
 
-$colors : (color : map.get($xl-tokens, color));
-@include map-deep-parse($colors) using ($path,$value)
-{
-  .qc-bg-#{deep-implode($path, '-')} {
-    background-color: $value;
-  }
-};
+@mixin generate-color-classes($colors) {
+  @include map-deep-parse($colors) using ($path,$value)
+  {
+    .qc-bg-#{deep-implode($path, '-')} {
+      background-color: token-value($path);
+    }
+  };
+}
+@include generate-color-classes((color : map.get($xl-tokens, color)));
