--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -14,3 +14,4 @@
 @use "./components/alert" as *;
 @use "./components/toTop" as *;
 @use "./components/separator" as *;
+@use "./components/searchBar" as *;
